feat: implemented UI ViewController to open native apple wallet       | removed android dependencies

--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,17 +1,10 @@
 {
   "platforms": [
-    "apple",
-    "android",
-    "web"
+    "apple"
   ],
   "apple": {
     "modules": [
-      "ExpoReactNativeWalletModule"
-    ]
-  },
-  "android": {
-    "modules": [
-      "expo.modules.reactnativewallet.ExpoReactNativeWalletModule"
+      "ExpoAppleWalletModule"
     ]
   }
 }
