fix: resolved conflict that breaks code on android even without using lib

--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,10 +1,14 @@
 {
-  "platforms": [
-    "apple"
-  ],
+  "name": "react-native-expo-apple-wallet",
+  "platforms": ["android", "ios"],
   "apple": {
     "modules": [
       "ExpoAppleWalletModule"
+    ]
+  },
+  "android": {
+    "modules": [
+      "expo.modules.applewallet.ExpoAppleWalletModule"
     ]
   }
 }
