feat: add ExpoAppDelegateSubscriber event

--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -4,6 +4,9 @@
   "apple": {
     "modules": [
       "ExpoAppleWalletModule"
+    ],
+    "appDelegateSubscribers": [
+      "AppleWalletAppDelegateSubscriber"
     ]
   },
   "android": {
